--- a/src/app/pages/about-us/components/about-us/about-us.component.html
+++ b/src/app/pages/about-us/components/about-us/about-us.component.html
@@ -79,7 +79,6 @@
                         their
                         protection through consultation, integration, and support.</p>
                 </div>
-
             </div>
             <div class="aboutSFour-part">
                 <div class="aboutSFour-texts">
@@ -105,7 +104,7 @@
 </section>
 <section class="aboutSSix">
     <div class="aboutSSix-container px-120">
-        <div class="d-flex flex-column gap24 sectionThree-titles">
+        <div class="d-flex flex-column divTitles">
             <span class="font-medium text-center subtitle24px color-linearGradient">Project Timeline</span>
             <h1 class="text-center font-bold subtitle48px" data-aos="fade-down"> <span class="color-linearGradient">AI
                     Project </span>In The
@@ -114,7 +113,6 @@
             <p class="mb-0 text-center subtitle24px style-font">Design the digital twin architecture tailored to the
                 specific needs of the buildings.</p>
         </div>
-
         <div class="d-flex fx-aboutSSix">
             <div class="box">
                 <img src="../../../../../assets/images/FoundingIcon.svg" alt="Founding Icon">
@@ -143,18 +141,158 @@
         </div>
     </div>
 </section>
+<section class="aboutSSeven">
+    <div class="aboutSSeven-container px-120">
+        <div class="d-flex flex-column divTitles">
+            <span class="font-medium text-center subtitle24px color-linearGradient">Our certificates</span>
+            <h1 class="text-center font-bold subtitle48px" data-aos="fade-down">Explore Our <span
+                    class="color-linearGradient">ISO Certificates </span></h1>
+            <p class="mb-0 text-center subtitle24px style-font">CODE help yor to determine your business requirements by
+                set of articles in many of IT categories</p>
+        </div>
+        <div class="d-flex fx-aboutSSeven">
+            <div class="imgsDiv imgsDiv1">
+                <img src="../../../../../assets/images/9001Dark.svg" alt="9001 Image" class="imgOne">
+                <img src="../../../../../assets/images/9001Blue.svg" alt="9001 Image" class="imgTwo">
+            </div>
+            <div class="imgsDiv imgsDiv2">
+                <img src="../../../../../assets/images/20000Dark.svg" alt="20000 Image" class="imgOne">
+                <img src="../../../../../assets/images/20000Orange.svg" alt="20000 Image" class="imgTwo">
+            </div>
+            <div class="imgsDiv imgsDiv3">
+                <img src="../../../../../assets/images/27001Dark.svg" alt="27001 Image" class="imgOne">
+                <img src="../../../../../assets/images/27001Green.svg" alt="27001 Image" class="imgTwo">
+            </div>
+        </div>
+    </div>
+</section>
+<section class="aboutSEight">
+    <div class="aboutSEight-container px-120">
+        <div class="d-flex flex-column divTitles">
+            <span class="font-medium text-center subtitle24px color-linearGradient">Our training programes</span>
+            <h1 class="text-center font-bold subtitle48px" data-aos="fade-down">How to Build Your Own <span
+                    class="color-linearGradient">Professional <br> DB Consulting </span>Service in 40 Days?</h1>
+            <p class="mb-0 text-center subtitle24px style-font">DB Consulting specializes in SQL Server, our tutorial
+                and training is founded on real-life experience, and we practice
+                what we preach! In addition to training courses and workshops, we offer</p>
+        </div>
+        <div class="d-flex fxSEight">
+            <div class="partOne">
+                <div class="d-flex flex-column boxSEight">
+                    <div class="d-flex fxTitleImg">
+                        <h4 class="colorBlue font-bold subtitle22px ">Fundamental Level</h4>
+                        <img src="../../../../../assets/images/rateIcon.svg" alt="rate Icon" class="rateIcon">
+                    </div>
+                    <p class="colorTwo mb-0 subtitle16px font-medium">How to build and manage your database
+                        infrastructure in 10
+                        days?</p>
+                </div>
+                <div class="d-flex flex-column boxSEight">
+                    <div class="d-flex fxTitleImg">
+                        <h4 class="colorBlue font-bold subtitle22px ">Beginning Level</h4>
+                        <img src="../../../../../assets/images/rateIcon.svg" alt="rate Icon" class="rateIcon">
+                    </div>
+                    <p class="colorTwo mb-0 subtitle16px font-medium">How to start using Microsoft SQL Server and create
+                        your own DB application in 10 days?</p>
+                </div>
+                <div class="d-flex flex-column boxSEight">
+                    <div class="d-flex fxTitleImg">
+                        <h4 class="colorBlue font-bold subtitle22px ">Intermediate Level</h4>
+                        <img src="../../../../../assets/images/rateIcon.svg" alt="rate Icon" class="rateIcon">
+                    </div>
+                    <p class="colorTwo mb-0 subtitle16px font-medium">How to build and manage your database
+                        infrastructure in 10 days?</p>
+                </div>
+                <div class="d-flex flex-column boxSEight">
+                    <div class="d-flex fxTitleImg">
+                        <h4 class="colorBlue font-bold subtitle22px ">Advanced Level</h4>
+                        <img src="../../../../../assets/images/rateIcon.svg" alt="rate Icon" class="rateIcon">
+                    </div>
+                    <p class="colorTwo mb-0 subtitle16px font-medium">How do you configure and scale your DB to handle
+                        the largest workload in 5 days?</p>
+                </div>
+                <div class="d-flex flex-column boxSEight">
+                    <div class="d-flex fxTitleImg">
+                        <h4 class="colorBlue font-bold subtitle22px ">Professional Level</h4>
+                        <img src="../../../../../assets/images/rateIcon.svg" alt="rate Icon" class="rateIcon">
+                    </div>
+                    <p class="colorTwo mb-0 subtitle16px font-medium">How to Build your own Data Engineering Platform
+                        and Manage TB Data in 10 Days?</p>
+                </div>
+            </div>
+            <div class="partTwo">
+                <img src="../../../../../assets/images/sectionOneGif.gif" alt="">
+            </div>
+            <div class="partThree">
+                <div class="d-flex flex-column boxTitle">
+                    <span class="style-font colorTwo">DB Consulting Overview</span>
+                    <h4 class="subtitle22px font-bold">Who should attend?</h4>
+                </div>
+                <div class="d-flex flex-column boxContent">
+                    <h3 class="subtitle18px colorTwo font-bold">SQL Server enthusiasts</h3>
+                    <p class="mb-0 style-font">Those eager for hands-on experience.</p>
+                </div>
+                <div class="d-flex flex-column boxContent">
+                    <h3 class="subtitle18px colorTwo font-bold">MCSE aspirants</h3>
+                    <p class="mb-0 style-font">Passionate about SQL Server certification.</p>
+                </div>
+                <div class="d-flex flex-column boxContent">
+                    <h3 class="subtitle18px colorTwo font-bold">T-SQL learners</h3>
+                    <p class="mb-0 style-font">Anyone with basic T-SQL knowledge.</p>
+                </div>
+                <div class="d-flex flex-column boxContent">
+                    <h3 class="subtitle18px colorTwo font-bold">SQL Server professionals</h3>
+                    <p class="mb-0 style-font">Managers, developers, analysts, and engineers.</p>
+                </div>
+                <div class="d-flex flex-column boxContent">
+                    <h3 class="subtitle18px colorTwo font-bold">Tech professionals</h3>
+                    <p class="mb-0 style-font">.NET developers, DB admins, analysts, and engineers..</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="aboutSNine">
+    <div class="aboutSNine-container px-120">
+        <div class="d-flex flex-column divTitles">
+            <span class="font-medium text-center subtitle24px color-linearGradient">Our Team</span>
+            <h1 class="text-center font-bold subtitle48px" data-aos="fade-down">company <span
+                    class="color-linearGradient">makes for an <br> successful </span>Service in 40 Days?</h1>
+        </div>
+        <div class="d-flex fxCardsTeam fxGeneral-cards">
+            <div *ngFor="let card of teamCards" class="cardTeam fxCard" (mouseenter)="onMouseEnter(card)"
+                (mouseleave)="onMouseLeave(card)">
 
+                <div class="divOne" [class.hidden]="card.isHovered"
+                    [style.background]="'linear-gradient(180deg, rgba(0, 0, 0, 0.00) 24.46%, rgba(0, 0, 0, 0.50) 73.8%), url(' + card.imageUrl + ') lightgray 50% / cover no-repeat'">
+                    <div class="d-flex flex-column divText">
+                        <h3 class="font-semiBold subtitle16px colorWhite text-center">{{card.name}}</h3>
+                        <p class="mb-0 colorWhite font-light text-center">{{card.role}}</p>
+                    </div>
+                </div>
+
+                <div class="divTwo" [class.visible]="card.isHovered">
+                    <div class="d-flex flex-column divText">
+                        <h3 class="font-semiBold subtitle16px colorBlue2 text-center">{{card.name}}</h3>
+                        <span class="mb-0 colorBlue2 font-light text-center">{{card.role}}</span>
+                        <p class="mb-0 style-font colorBlack">{{card.description}}</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
 <section class="contactSection">
     <img src="../../../../../assets/images/CONTACT-text.svg" alt="CONTACT-text" class="contact-text">
     <div class="contactSection-container px-120">
         <div class="contactSection-div d-flex">
             <div class="contactSection-texts">
                 <span class="subtitle24px d-block color-linearGradient font-medium mb24" data-aos="fade-down"
-                    data-aos-easing="linear" data-aos-duration="1000"> Work with us</span>
-                <h1 class=" subtitle48px font-bold mb-0" data-aos="zoom-in-up">Ready to <span
-                        class="color-linearGradient">join us
-                    </span>& <span class="color-linearGradient"><br> level up</span> your
-                    skills</h1>
+                    data-aos-easing="linear" data-aos-duration="1000"> Join CODE. Shape What’s Next.</span>
+                <h1 class=" subtitle48px font-bold mb-0" data-aos="zoom-in-up">Ready to Build the <span
+                        class="color-linearGradient">Future
+                    </span>and <span class="color-linearGradient">Grow </span>with Us?</h1>
             </div>
             <div class="contactSection-buttons d-flex">
                 <button class="btn-linearGradient" type="button">
@@ -163,11 +301,6 @@
                 </button>
             </div>
         </div>
-        <p class="mb-0 colorTwo style-font">DB Consulting specializes in SQL Server, our tutorial and training
-            is founded
-            on
-            real-life
-            experience, and we practice
-            what we preach! In addition to training courses and workshops, we offer</p>
+        <p class="mb-0 colorTwo style-font">CODE ensuring a clear roadmap for your business to success.</p>
     </div>
 </section>
