--- a/src/app/pages/about-us/components/about-us/about-us.component.css
+++ b/src/app/pages/about-us/components/about-us/about-us.component.css
@@ -150,7 +150,6 @@
 .aboutSThree .aboutSThree-imgs .aboutSThree-img1{
    width: 64%;
 }
-
 .aboutSThree .aboutSThree-imgs .imgAbs{
     border-radius: 30px;
     background: #fff;
@@ -394,10 +393,6 @@
 }
 @media (max-width:512px) {}
 /* about Section Six */
-.aboutSSix .sectionThree-titles{
-    width: 62%;
-    margin: auto;
-}
 .aboutSSix .fx-aboutSSix{
     gap: 76px;
     justify-content: center;
@@ -478,9 +473,274 @@
 @media (max-width:768px) {}
 @media (max-width:614.4px) {
     .aboutSSix .fx-aboutSSix{flex-direction: column;gap: 24px;}  
-    .aboutSSix .sectionThree-titles{width: 100%;}
     .aboutSSix .fx-aboutSSix .box{width: 50%;height: 150px;}
     .aboutSSix .fx-aboutSSix .box img{width: 60px;}
     .aboutSSix .fx-aboutSSix .box h3{font-size: 14px;}
+}
+@media (max-width:512px) {}
+/* About Us Section Seven */
+.aboutSSeven{
+    margin: 6rem 0;
+}
+.aboutSSeven .divTitles{width: 67%;}
+.aboutSSeven .fx-aboutSSeven{
+    gap: 50px;
+    justify-content: center;
+    margin-top: 64px;
+    width: 100%;
+}
+.aboutSSeven .imgsDiv{
+    transition: all 1s ease;
+    cursor: pointer;
+    width: 25%;
+}
+.aboutSSeven .imgsDiv img{width: 100%;}
+.aboutSSeven .imgsDiv .imgTwo{
+    opacity: 0;
+    display: none;
+}
+.aboutSSeven .imgsDiv1:hover .imgTwo,
+.aboutSSeven .imgsDiv2:hover .imgTwo,
+.aboutSSeven .imgsDiv3:hover .imgTwo{
+    opacity: 1;
+    display: block;
+}
+.aboutSSeven .imgsDiv1:hover .imgOne,
+.aboutSSeven .imgsDiv2:hover .imgOne,
+.aboutSSeven .imgsDiv3:hover .imgOne{
+    opacity: 0;
+    display: none;
+}
+@media (max-width:614px) {
+    .aboutSSeven .divTitles{width: 100%;}
+}
+/* Section Eight Style */
+.aboutSEight .divTitles{width: 70%;}
+.aboutSEight .fxSEight{
+    width: 90%;
+    margin: auto;
+    margin-top: 48px;
+    justify-content: space-between;
+    gap: 40px;
+    align-items: normal;
+}
+.aboutSEight .fxSEight .partOne{
+    width: 31%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.aboutSEight .fxSEight .partOne .fxTitleImg{
+    align-items: end;
+    justify-content: space-between;
+    margin-bottom: 8px;
+    gap: 14px;
+}
+.aboutSEight .fxSEight .partTwo{
+    width:38%;
+    height: 100%;
+}
+.aboutSEight .fxSEight .partTwo img{
+    min-height: 600px;
+    width: 100%;
+    border-radius: 30px;
+    object-fit: cover;
+}
+.aboutSEight .fxSEight .partThree{
+    display: flex;
+    flex-direction: column;
+    gap: 55px;
+    width: 31%;
+}
+.aboutSEight .fxSEight .partThree .boxTitle span{font-size: 14px;display: block;margin-bottom: 8px;}
+.aboutSEight .fxSEight .partThree .boxTitle h4{
+    background: linear-gradient(90deg, #006EC6 0%, #99D1FF 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+.aboutSEight .fxSSeven .partThree .boxContent h3{margin-bottom: 4px;}
+@media (min-width:1706.67px) {
+    .aboutSEight .fxSEight .partTwo img{min-height:630px;}
+}
+@media (min-width:1920px) {
+    .aboutSEight .fxSEight .partTwo img{min-height:680px;}
+}
+@media (min-width:2048px) { 
+    .aboutSEight .fxSEight .partTwo img{min-height:720px;}
+}
+@media (min-width:2304px) {
+    .aboutSEight .fxSEight .partTwo img{min-height:780px;}
+}
+@media (max-width:1396.36px) {
+    .aboutSEight .fxSEight .partTwo img{min-height: 550px;}
+    .aboutSEight .fxSEight .partOne{gap: 14px;}
+    .aboutSEight .fxSEight .partThree{gap: 50px;}
+}
+@media (max-width:1228.8px) {
+    .aboutSEight .fxSEight .partOne{gap: 12px;}
+    .aboutSEight .fxSEight .partThree{gap: 45px;}
+}
+@media (max-width:1024px) {
+    .aboutSEight .fxSEight .partTwo img{min-height: 500px;}
+    .aboutSEight .fxSEight .partOne{gap: 12px;}
+    .aboutSEight .fxSEight .partThree{gap: 35px;}
+    .aboutSEight .fxSEight .partOne .fxTitleImg img{width: 45px;}
+    .aboutSEight .fxSEight{gap: 32px;}
+}
+@media (max-width:877.71px) {
+    .aboutSEight .fxSEight .partTwo img{min-height: 450px;}
+    .aboutSEight .fxSEight .partOne{gap: 10px;}
+    .aboutSEight .fxSEight .partThree{gap: 24px;}
+    .aboutSEight .fxSEight .partOne .fxTitleImg img{width: 40px;}
+    .aboutSEight .fxSEight{gap: 24px;}
+}
+@media (max-width:768px) {}
+@media (max-width:614.4px) {
+    .aboutSEight .fxSEight{flex-direction: column;gap: 16px;}
+    .aboutSEight .fxSEight .partOne{width: 100%;}
+    .aboutSEight .fxSEight .partTwo {width: 100%;}
+    .aboutSEight .fxSEight .partThree{width: 100%;}
+    .aboutSEight .fxSEight .partTwo img{min-height: 350px;}
+    .aboutSEight .divTitles{width: 100%;}
+    .aboutSEight .fxSEight{margin-top: 24px;}
+}
+@media (max-width:512px) {}
+/* Section Nine Style */
+.aboutSNine{margin: 90px 0;}
+.aboutSNine .fxCardsTeam{
+    margin-top: 48px;
+    gap: 20px;
+    justify-content: center;
+}
+.aboutSNine .fxCardsTeam .cardTeam{
+    flex: 1 1 calc(25% - 20px);
+    max-width: calc(25% - 20px);
+    position: relative;
+
+}
+.aboutSNine .fxCardsTeam .divOne {
+    display: flex;
+    min-height: 338px;
+    padding: 24px 32px;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 10px;
+    border-radius: 15px;
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 1;
+    visibility: visible;
+  }
+  
+.aboutSNine .fxCardsTeam .divOne.hidden {
+    opacity: 0;
+    visibility: hidden;
+  }
+.aboutSNine .fxCardsTeam .divOne .divText h3{margin-bottom: 4px;}
+.aboutSNine .fxCardsTeam .divTwo {
+    border-radius: 15px;
+    border: 1px solid #D3D3D3;
+    background: #FFF;    
+    min-height: 338px;
+    max-height: 100%;
+    padding: 24px;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .aboutSNine .fxCardsTeam .divTwo.visible {
+    opacity: 1;
+    visibility: visible;
+  }
+.aboutSNine .fxCardsTeam .divTwo:after{
+    border-bottom: 3px solid #006DC6;
+    content: "";
+    height: 100%;
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.aboutSNine .fxCardsTeam .divTwo span{
+    display: block;
+    padding: 4px 0 10px 0;
+    font-size: 12px;
+}
+.aboutSNine .fxCardsTeam .divTwo p{
+    text-align: justify;
+    font-size: 12px;
+}
+@media (min-width:1706.67px) {
+    .aboutSNine .fxCardsTeam .divOne,
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 388px;}
+    .aboutSNine .fxCardsTeam .divTwo p,
+    .aboutSNine .fxCardsTeam .divTwo span{font-size: 14px;}
+}
+@media (min-width:1920px) {
+    .aboutSNine .fxCardsTeam .divOne,
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 430px;}
+    .aboutSNine .fxCardsTeam .divTwo p,
+    .aboutSNine .fxCardsTeam .divTwo span{font-size: 17px;}
+}
+@media (min-width:2048px) { 
+    .aboutSNine .fxCardsTeam .divOne,
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 470px;}
+    .aboutSNine .fxCardsTeam .divTwo p,
+    .aboutSNine .fxCardsTeam .divTwo span{font-size: 20px;}
+}
+@media (min-width:2304px) {}
+@media (max-width:1396.36px) {
+    .aboutSNine .fxCardsTeam .divOne,
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 300px;}
+}
+@media (max-width:1228.8px) {
+    .aboutSSeven .fx-aboutSSeven{gap: 80px;}
+    .aboutSSeven .fx-aboutSSeven{margin-top: 48px;}
+    .aboutSNine .fxCardsTeam .divOne{min-height: 260px;padding: 24px;}
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 260px;}
+}
+@media (max-width:1024px) {
+    .aboutSSeven .fx-aboutSSeven{gap: 60px;}
+    .aboutSSeven .fx-aboutSSeven{margin-top: 32px;}
+    .aboutSNine .fxCardsTeam{gap: 16px;}
+    .aboutSNine .fxCardsTeam .cardTeam{
+        flex: 1 1 calc(33.3% - 16px);
+        max-width: calc(33.3% - 16px);
+    }
+    .aboutSNine .fxCardsTeam .divTwo{padding: 16px;}
+    .aboutSNine .fxCardsTeam{margin-top: 32px;}
+}
+@media (max-width:877.71px) {
+    .aboutSNine .fxCardsTeam{gap: 12px;}
+    .aboutSNine .fxCardsTeam .cardTeam{
+        flex: 1 1 calc(50% - 16px);
+        max-width: calc(50% - 16px);
+    }
+    .aboutSNine .fxCardsTeam .divOne,
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 350px;}
+}
+@media (max-width:614.4px) {
+    .aboutSNine .fxCardsTeam .divOne,
+    .aboutSNine .fxCardsTeam .divTwo{min-height: 250px;}
+    .aboutSNine .fxCardsTeam .cardTeam{
+        flex: 1 1 calc(100% - 16px);
+        max-width: calc(100% - 0px);
+    }
+    .aboutSSeven .fx-aboutSSeven{gap: 24px;}
+    .aboutSNine .fxCardsTeam .divTwo h3{font-size: 14px;}
+    .aboutSNine .fxCardsTeam .divTwo p{text-align: center;}
+    .aboutSNine .fxCardsTeam .divTwo p,
+    .aboutSNine .fxCardsTeam .divTwo span{font-size: 13px;}
+    .aboutSNine .fxCardsTeam{margin-top: 24px;}
 }
 @media (max-width:512px) {}
