--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,8 +3,8 @@
         <div class="fxGeneral-cards fxFooter">
             <div class="fxFooter-part2 fxGeneral-cards-st d-flex flex-column text-center">
                 <img src="../../../assets/images/logo.svg" alt="code logo" class="logo">
-                <p class="style-font subtitle24px">leading partner of several heavy weight companies in the ICT
-                    sector.</p>
+                <p class="style-font subtitle24px">Empowering industry leaders in the Gulf and Middle East with
+                    AI-driven digital transformation.</p>
                 <div class="d-flex align-items-center fxFooter-icons ">
                     <a href="" class="transition3s"><img src="../../../assets/images/facebook-icon.svg"
                             alt="facebook icon"></a>
