--- a/src/app/shared/navbar-des/navbar-des.component.html
+++ b/src/app/shared/navbar-des/navbar-des.component.html
@@ -1,6 +1,6 @@
 <header class="header px-120">
     <div class="d-flex align-items-center justify-content-between fx-header">
-        <a class="logo-header" routerLink="/"><img src="../../../assets/images/logo.svg" alt="logo image"></a>
+        <a class="logo-header" routerLink="/"><img src="assets/images/logo.svg" alt="logo image"></a>
         <div class="d-flex links-header gap20 align-items-center">
             <a routerLink="/" routerLinkActive="color-linearGradient" [routerLinkActiveOptions]="{exact:true}"
                 class="font-medium  linkStyle">Home</a>
@@ -11,7 +11,7 @@
                 <button type="button" class="link d-flex align-items-center" data-target="Industries-list"
                     routerLink="aboutUs" routerLinkActive="dropDownActive">
                     <span class="font-medium linkStyle">About us</span>
-                    <img src="../../../assets/images/arrowDown.svg" alt="arrowDown icon">
+                    <img src="assets/images/arrowDown.svg" alt="arrowDown icon">
                 </button>
                 <div class="listAboutHeader">
                     <a routerLink="/aboutUs/ourClients" routerLinkActive="active" class="font-medium subtitle16px ">Our
@@ -26,7 +26,7 @@
                 <button type="button" class="link d-flex align-items-center" data-target="Industries-list"
                     routerLink="/ourServices" routerLinkActive="dropDownActive">
                     <span class="font-medium linkStyle">Our services</span>
-                    <img src="../../../assets/images/arrowDown.svg" alt="arrowDown icon">
+                    <img src="assets/images/arrowDown.svg" alt="arrowDown icon">
                 </button>
                 <div class="listServicesHeader" id="Industries-list">
                     <div class="listPart">
