--- a/src/app/shared/people-saying/people-saying.component.html
+++ b/src/app/shared/people-saying/people-saying.component.html
@@ -12,7 +12,7 @@
                 <div class="slide">
                     <div class="card-sectionSix" [style.background-color]="say.backgroundColor">
                         <div class="divTextOne">
-                            <img src="../../../../../assets/images/Quote-card.svg" alt="Quote-card.svg">
+                            <img src="assets/images/Quote-card.svg" alt="Quote-card.svg">
                             <h5 class="colorBlack font-medium subtitle18px mb-0">{{say.text}}</h5>
                         </div>
                         <div class="divTextTwo">
