--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,19 +2,15 @@
     <div class="footer-container px-120">
         <div class="fxGeneral-cards fxFooter">
             <div class="fxFooter-part2 fxGeneral-cards-st d-flex flex-column text-center">
-                <img src="../../../assets/images/logo.svg" alt="code logo" class="logo">
+                <img src="assets/images/logo.svg" alt="code logo" class="logo">
                 <p class="style-font subtitle24px text-start">Empowering industry leaders in the Gulf and Middle East
                     with
                     AI-driven digital transformation</p>
                 <div class="d-flex align-items-center fxFooter-icons ">
-                    <a href="" class="transition3s"><img src="../../../assets/images/facebook-icon.svg"
-                            alt="facebook icon"></a>
-                    <a href="" class="transition3s"><img src="../../../assets/images/instgram-icon.svg"
-                            alt="facebook icon"></a>
-                    <a href="" class="transition3s"><img src="../../../assets/images/twitter-icon.svg"
-                            alt="twitter icon"></a>
-                    <a href="" class="transition3s"><img src="../../../assets/images/linkedin-icon.svg"
-                            alt="linkedin icon"></a>
+                    <a href="" class="transition3s"><img src="assets/images/facebook-icon.svg" alt="facebook icon"></a>
+                    <a href="" class="transition3s"><img src="assets/images/instgram-icon.svg" alt="facebook icon"></a>
+                    <a href="" class="transition3s"><img src="assets/images/twitter-icon.svg" alt="twitter icon"></a>
+                    <a href="" class="transition3s"><img src="assets/images/linkedin-icon.svg" alt="linkedin icon"></a>
                 </div>
             </div>
             <div class="fxFooter-part1">
@@ -37,10 +33,10 @@
             </div>
             <div class="fxFooter-part3 fxGeneral-cards-st">
                 <h2 class="font-medium subtitle36px">Contact</h2>
-                <p class="subtitle24px style-font">Riyadh – Saudi Arabia <br>
+                <p class="subtitle20px style-font">Riyadh – Saudi Arabia <br>
                     Egypt – Cairo</p>
-                <p class="subtitle24px style-font">Need help? Call us <br>  +(***)*******</p>
-                <p class="subtitle24px style-font mb-0">email&#64;code.com</p>
+                <p class="subtitle20px style-font">Need help? Call us <br> <b>+966542828120</b></p>
+                <p class="subtitle20px style-font mb-0"> sales&#64;code.sa</p>
             </div>
         </div>
         <div class="copyright">
