--- a/src/app/shared/navbar-mb/navbar-mb.component.html
+++ b/src/app/shared/navbar-mb/navbar-mb.component.html
@@ -1,6 +1,6 @@
 <div class="navbar-mobile">
     <div class=" align-items-center  justify-content-between  flex-head">
-        <a routerLink="/"><img src="../../../assets/images/logo.svg" class="logo-image" /></a>
+        <a routerLink="/"><img src="assets/images/logo.svg" class="logo-image" /></a>
         <div class="hamburger" id="hamburger" (click)="toggleSidenav(true)">
             <div class="div1"></div>
             <div class="div2"></div>
@@ -10,7 +10,7 @@
     <nav class="nav-mobile" [class.active]="isSidenavOpen">
         <div class="links">
             <div class="d-flex align-items-center justify-content-between fxLogo">
-                <img src="../../../assets/images/logo.svg" class="logo" />
+                <img src="assets/images/logo.svg" class="logo" />
                 <div class="hamburger" id="hamburger-inside" (click)="toggleSidenav(false)">
                     <div class="div1"></div>
                     <div class="div2"></div>
@@ -25,8 +25,7 @@
                     <button type="button" class="link d-flex align-items-center justify-content-between w-100"
                         (click)="toggleAboutUsList()" routerLink="aboutUs" routerLinkActive="dropDownActive">
                         <span class="font-medium linkStyle" (click)="closeSidenav()">About us</span>
-                        <img src="../../../assets/images/arrowDown.svg" alt="arrowDown icon"
-                            [class.rotated]="aboutUsListOpen" />
+                        <img src="assets/images/arrowDown.svg" alt="arrowDown icon" [class.rotated]="aboutUsListOpen" />
                     </button>
                     <div class="listServices" [class.active]="aboutUsListOpen">
                         <div class="listPart">
@@ -47,7 +46,7 @@
                     <button type="button" class="link d-flex align-items-center justify-content-between w-100"
                         (click)="toggleServicesList()" routerLink="/ourServices" routerLinkActive="dropDownActive">
                         <span class="font-medium linkStyle" (click)="closeSidenav()">Our services</span>
-                        <img src="../../../assets/images/arrowDown.svg" alt="arrowDown icon"
+                        <img src="assets/images/arrowDown.svg" alt="arrowDown icon"
                             [class.rotated]="servicesListOpen" />
                     </button>
                     <div class="listServices" [class.active]="servicesListOpen">
